syntax = "proto3";
option go_package = "proto.client.type.classifier";

service ClientTypeClassifierService {
  rpc List(ListClientTypeClassifierRequest) returns (ListClientTypeClassifierResponse);
  rpc Create(CreateClientTypeClassifierRequest) returns (ClientTypeClassifierProfileResponse);
  rpc Read(SingleClientTypeClassifierRequest) returns (ClientTypeClassifierProfileResponse);
  rpc Update(UpdateClientTypeClassifierRequest) returns (SuccessResponse);
  rpc Delete(SingleClientTypeClassifierRequest) returns (SuccessResponse);
}

message ListClientTypeClassifierRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message ListClientTypeClassifierResponse {
  repeated ClientTypeClassifierProfileResponse client_type_classifier = 1;
}

message CreateClientTypeClassifierRequest {
  int64 code = 1;
  string name = 2;
  string short_name = 3;
  int32 client_type = 4;
  string activation_date = 5;
  string deactivation_date = 6;
  int32 cbu_reference_key = 7;
  int32 old_code = 8;
  string old_name = 9;
}

message SingleClientTypeClassifierRequest {
  oneof client_type_classifier_identifier {
    int64 id = 1;
    int64 code = 2;
  }
}

message ClientTypeClassifierProfileResponse {
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  string short_name = 4;
  int32 client_type = 5;
  string activation_date = 6;
  string deactivation_date = 7;
  int32 cbu_reference_key = 8;
  int32 old_code = 9;
  string old_name = 10;
  string deleted_at = 11;
}

message SuccessResponse {
  string response = 1;
}

message UpdateClientTypeClassifierRequest {
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  string short_name = 4;
  int32 client_type = 5;
  string activation_date = 6;
  string deactivation_date = 7;
  int32 cbu_reference_key = 8;
  int32 old_code = 9;
  string old_name = 10;
}


/*
protoc \
--proto_path=proto/client_type_classifier \
--go_out=proto/client_type_classifier \
--go_opt=paths=source_relative proto/client_type_classifier/client_type_classifier.proto \
--go-grpc_out=proto/client_type_classifier \
--go-grpc_opt=paths=source_relative proto/client_type_classifier/client_type_classifier.proto
*/